# lab05

./: CMakeLists.txt  LICENSE  README.md  hello_world.cpp
.github/workflows/: linux.yml
_build/: CTestTestfile.cmake  check
banking/: CMakeLists.txt
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: test1.cpp
